--- a/Colocalization_Shiny/Summary.Rmd
+++ b/Colocalization_Shiny/Summary.Rmd
@@ -9,16 +9,15 @@ runtime: shiny
   
 ```{r setup, include=FALSE}
 library(shiny)
-#library(shinydashboard)
 library(plotly)
 library(RColorBrewer)
 library(tidyr)
-#library(keys)
 library(stringr)
 library(plyr)
 library(DT)
-source('prepare_plate_functions.R')
-source('prepare_plate_functions2.R')
+library(devtools)
+source_url("https://raw.githubusercontent.com/Tal-lev/Portfolio/main/Colocalization_Shiny/prepare_plate_functions.R")
+source_url("https://raw.githubusercontent.com/Tal-lev/Portfolio/main/Colocalization_Shiny/prepare_plate_functions2.R")
 
 ```
 
